@@ -1,3 +1,10 @@
+2003-04-12  Brian Warner  <warner@lothar.com>
+
+	* twisted/internet/process.py (PTYProcess.connectionLost): Treat
+	PTYs more like sockets: loseConnection sets .disconnecting and
+	lets the write pipe drain, then the PTY is closed in
+	connectionLost.
+
 2003-04-12  Paul Swartz  <z3p@twistedmatrix.com
 
 	* twisted/plugins.tml, twisted/tap/ssh.py, twisted/tap/conch.py: moved
